--- a/#src/sass/_settings.sass
+++ b/#src/sass/_settings.sass
@@ -32,6 +32,8 @@ input
   flex-direction: column
   min-height: 100%
   overflow: hidden
+  // УДАЛИТЬ НИЖЕ
+  position: relative
 
 .main
   flex: 1 0 auto
