--- a/#src/sass/style.sass
+++ b/#src/sass/style.sass
@@ -29,6 +29,7 @@
 
 // подключение стилей подвала
 @import 'components/footer'
+@import 'call-btn'
 // @import 'components/modal'
 // подключение стилей для аккордеона
 // @import 'components/accordeon'
